update to jellybean style
Change-Id: I82d0d494eda700908b5a039510d16df7b89f99f8

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -40,5 +40,6 @@
     <string name="dialog_ok">确定</string>
     <string name="dialog_no">取消</string>
     <string name="is_to_save">是否保存？</string>
+    <string name="is_to_delete">是否删除？</string>
 
 </resources>
