--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -40,5 +40,6 @@
     <string name="dialog_ok">確定</string>
     <string name="dialog_no">取消</string>
     <string name="is_to_save">是否保存？</string>
+    <string name="is_to_delete">是否刪除？</string>
 
 </resources>
